; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_varlink.c_varlink_error_invalid_parameter.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_varlink.c_varlink_error_invalid_parameter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@VARLINK_ERROR_INVALID_PARAMETER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @varlink_error_invalid_parameter(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32, i32* @EINVAL, align 4
  %8 = sub nsw i32 0, %7
  %9 = call i32 @assert_return(i32* %6, i32 %8)
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  %13 = call i32 @assert_return(i32* %10, i32 %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @json_variant_is_string(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* @VARLINK_ERROR_INVALID_PARAMETER, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @varlink_error(i32* %18, i32 %19, i32* %20)
  store i32 %21, i32* %3, align 4
  br label %39

22:                                               ; preds = %2
  %23 = load i32*, i32** %5, align 8
  %24 = call i64 @json_variant_is_object(i32* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %36

26:                                               ; preds = %22
  %27 = load i32*, i32** %5, align 8
  %28 = call i64 @json_variant_elements(i32* %27)
  %29 = icmp sgt i64 %28, 0
  br i1 %29, label %30, label %36

30:                                               ; preds = %26
  %31 = load i32*, i32** %4, align 8
  %32 = load i32, i32* @VARLINK_ERROR_INVALID_PARAMETER, align 4
  %33 = load i32*, i32** %5, align 8
  %34 = call i32* @json_variant_by_index(i32* %33, i32 0)
  %35 = call i32 @varlink_error(i32* %31, i32 %32, i32* %34)
  store i32 %35, i32* %3, align 4
  br label %39

36:                                               ; preds = %26, %22
  %37 = load i32, i32* @EINVAL, align 4
  %38 = sub nsw i32 0, %37
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %36, %30, %17
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @assert_return(i32*, i32) #1

declare dso_local i64 @json_variant_is_string(i32*) #1

declare dso_local i32 @varlink_error(i32*, i32, i32*) #1

declare dso_local i64 @json_variant_is_object(i32*) #1

declare dso_local i64 @json_variant_elements(i32*) #1

declare dso_local i32* @json_variant_by_index(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
